--- a/src/views/partials/_modalProfile.hbs
+++ b/src/views/partials/_modalProfile.hbs
@@ -14,7 +14,7 @@
                             <div class="row ml-5">
                                 <div class="form-group ml-4">
                                     <img src="/images/avatar/profile.png" alt="Fotom Perfil" class="ml-5"
-                                        style="border-radius:50%;">
+                                        style="border-radius:50%;" width="250">
                                 </div>
                             </div>
                         </div>
