--- a/src/views/profile/myProfile.hbs
+++ b/src/views/profile/myProfile.hbs
@@ -7,7 +7,7 @@
                     <form action="/profile/upload" method="post" enctype="multipart/form-data">
                         <a data-target="#imgProfile" href="">
                             <img src="/images/avatar/profile.png" alt="Fotom Perfil" class="ml-5"
-                                style="border-radius:50%;">
+                                style="border-radius:50%;" width="250">
                         </a>
                         <div class="form-group col-4 ml-4" >
                             <button type="button" data-toggle="modal" data-target="#imgProfile" class="btn btn-outline-dark mt-3 ml-5" style="border-radius: 5px;">Carregar  Imagem</button>
