--- a/src/views/index/index.hbs
+++ b/src/views/index/index.hbs
@@ -128,7 +128,7 @@
                 <div id="pedidos" class="row" style="min-height: 500px;">
                     <div class="col-sm-4">
                         <h4 class="card-title mb-0">Pedidos</h4>
-                        <div class="small text-muted">October 2017</div>
+                        <div class="small text-muted">{{meseAno}}</div>
 
                     </div>
                     <!--/.col-->
@@ -172,7 +172,7 @@
 
                     <div class="form-group col-12">
                         <div class="form-group col-4">
-                            <h6 class=""><strong>Pedido: </strong> #</h6>
+                            <h6 class=""><strong>Pedido: </strong> #{{this.orderRequest}}</h6>
                         </div>
 
                         <div class="form-group col-8" >
