--- a/src/views/login/login.hbs
+++ b/src/views/login/login.hbs
@@ -23,13 +23,13 @@
                                 <input type="checkbox"> Remember Me
                             </label>
                             <label class="pull-right">
-                                <a href="#">Esqueceu a Senha?</a>
+                                <a href="/redefinirSenha">Esqueceu a Senha?</a>
                             </label>
 
                         </div>
                         <button type="submit" class="btn btn-success btn-flat m-b-30 m-t-30">Sign in</button>
                         <div class="register-link m-t-15 text-center mt-5">
-                            <p>Seu outra lanchonete ainda não possui uma conta? <a href="/register"> Crie uma conta agora e ganhe até 10% em desconto</a></p>
+                            <p>Sua outra lanchonete ainda não possui uma conta? <a href="/register"> Crie uma conta agora e ganhe até 10% em desconto</a></p>
                         </div>
                     </form>
                 </div>
