--- a/src/views/login/login.hbs
+++ b/src/views/login/login.hbs
@@ -16,7 +16,8 @@
                         </div>
                         <div class="form-group">
                             <label>Password</label>
-                            <input type="password" class="form-control" name="password" placeholder="Password" value="secret(!@#)">
+                            <input type="password" class="form-control" name="password" placeholder="Password" >
+                            {{!-- value="secret(!@#)" --}}
                         </div>
                         <div class="checkbox">
                             <label>
