--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -21,40 +21,44 @@
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"> <i class="menu-icon fa fa-desktop"></i>Montar Pedido</a>
-                    <ul class="sub-menu children dropdown-menu">                  
-                        <li><i class="fa fa-table"></i><a href="/caixa">Montar Pedido</a></li>                        
+                    <ul class="sub-menu children dropdown-menu">
+                        <li><i class="fa fa-table"></i><a href="/caixa">Montar Pedido</a></li>
                     </ul>
-                </li> 
+                </li>
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="true"> <i class="menu-icon fa fa-area-chart"></i>Dados Empresa</a>
-                    <ul class="sub-menu children dropdown-menu">                                              
-                        <li><i class="menu-icon fa fa-area-chart"></i><a href="/dados/lucros">Graficos da Empresa</a></li>                                                                                                    
+                    <ul class="sub-menu children dropdown-menu">
+                        <li><i class="menu-icon fa fa-area-chart"></i><a href="/dados/lucros">Graficos da Empresa</a></li>
                     </ul>
                 </li>
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"> <i class="menu-icon fa fa-desktop"></i>Visualizar Configurações</a>
-                    <ul class="sub-menu children dropdown-menu">                  
+                    <ul class="sub-menu children dropdown-menu">
                         <li><i class="fa fa-table"></i><a href="/menu/views">Visualizar Menu</a></li>
                         <li><i class="fa fa-table"></i><a href="/clients/1">Visualizar Clientes</a></li>
                     </ul>
-                </li>                
+                </li>
                 <h3 class="menu-title">CONFIGURAÇÕES</h3><!-- /.menu-title -->
                 <li class="menu-item-has-children dropdown ">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"> <i class="menu-icon fa fa-cogs"></i>Configurações</a>
-                    <ul class="sub-menu children dropdown-menu">                        
+                    <ul class="sub-menu children dropdown-menu">
                         <li><i class="menu-icon fa fa-gear"></i><a href="/config">Configurações Gerais</a></li>
                         <li><i class="menu-icon fa fa-gear"></i><a href="/menu/register">Cadastrar Menu</a></li>
                         <li><i class="menu-icon fa fa-gear"></i><a href="/config/delivery">Configurar Delivery</a></li>
                     </ul>
-                </li>                              
+                </li>
                 <li class="menu-item-has-children dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                        aria-expanded="false"> <i class="menu-icon fa fa-area-chart"></i>Marketing</a>
+                        aria-expanded="false"> <i class="menu-icon ti-shopping-cart-full"></i>Marketing</a>
                     <ul class="sub-menu children dropdown-menu">
-                        <li><i class="menu-icon fa fa-map-o"></i><a href="/">Enviar Propaganda</a></li>
+                        <li><i class="ti-lock"></i><a href="/marketing">Messagem em Massa</a></li>
+                        <li><i class="ti-lock"></i><a href="/marketing">Imagem de Propaganda</a></li>
+                        <li><i class="ti-lock"></i><a href="/marketing">Traffic`s Paginas/Sites</a></li>
+                        <li><i class="ti-lock"></i><a href="/marketing">Promoções Inteligentes</a></li>
+                        <li><i class="ti-lock"></i><a href="/marketing">Divulgações e Sorteios</a></li>
                     </ul>
                 </li>
                 <h3 class="menu-title">Extras</h3><!-- /.menu-title -->
@@ -62,12 +66,12 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false"> <i class="menu-icon fa fa-wrench"></i>Suporte técnico</a>
                     <ul class="sub-menu children dropdown-menu">
-                        <li><i class="menu-icon fa fa-line-chart"></i><a href="charts-chartjs.html">XXX@hotmail.com</a></li>
+                        <li><i class="menu-icon fa fa-line-chart"></i><a href="charts-chartjs.html">developingsolutionstech@gmail.com</a></li>
                         <li><i class="menu-icon fa fa-area-chart"></i><a href="charts-flot.html">Messagem Whatsapp</a></li>
                     </ul>
-                </li>                
+                </li>
                 <li><i class="menu-icon fa fa-code mt-5" style="color: rgba(255, 255, 255, 0.527);"> Author: <a href="" class="text-center" style="color: rgba(255, 255, 255, 0.527);">Mendes & IsaacDSC</a></i></li>
-                <li class="ml-4"><i class="menu-icon fa fa-globe"  style="color:rgba(255, 255, 255, 0.527)"> <a href="">Mananging Business</a></i></li>
+                <li class="ml-4"><i class="menu-icon fa fa-globe"  style="color:rgba(255, 255, 255, 0.527)"> <a href="">developing solutions tech</a></i></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </nav>
