--- a/src/views/profile/myProfile.hbs
+++ b/src/views/profile/myProfile.hbs
@@ -32,10 +32,15 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="form-group col-6">
+                            <div class="form-group col-3">
                                 <label for="telephone">Telefone</label>
                                 <input type="text" name="telephone" id="telephone" class="form-control"
-                                    placeholder="Digite seu E-mail">
+                                    placeholder="Digite o numero de contato">
+                            </div>
+                             <div class="form-group col-3">
+                                <label for="pwd">Senha</label>
+                                <input type="password" name="pwd" id="pwd" class="form-control"
+                                    placeholder="Digite o numero de contato">
                             </div>
                             <div class="form-group col-6">
                                 <label for="email">E-mail</label>
