--- a/src/views/partials/_sidebar.hbs
+++ b/src/views/partials/_sidebar.hbs
@@ -67,7 +67,7 @@
                         aria-expanded="false"> <i class="menu-icon fa fa-wrench"></i>Suporte técnico</a>
                     <ul class="sub-menu children dropdown-menu">
                         <li><i class="menu-icon fa fa-line-chart"></i><a href="charts-chartjs.html">developingsolutionstech@gmail.com</a></li>
-                        <li><i class="menu-icon fa fa-area-chart"></i><a href="charts-flot.html">Messagem Whatsapp</a></li>
+                        <li><i class="menu-icon fa fa-area-chart"></i><a href="https://api.whatsapp.com/send?phone=5535988798846&text=Olá%20Preciso%20de%20suporte" target="_blank">Messagem Whatsapp</a></li>
                     </ul>
                 </li>
                 <li><i class="menu-icon fa fa-code mt-5" style="color: rgba(255, 255, 255, 0.527);"> Author: <a href="" class="text-center" style="color: rgba(255, 255, 255, 0.527);">Mendes & IsaacDSC</a></i></li>
