--- a/src/views/login/resetSenha.hbs
+++ b/src/views/login/resetSenha.hbs
@@ -170,7 +170,7 @@
                             style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
                             <p style="margin: 0;">Para mais informações entre em contato com o<a
                                     href="https://sendgrid.com" target="_blank"> Suporte Técnico</a> a gora!.</p>
-                            <p style="margin: 0;">Author: IsaacDSC & Mateus Mendes</p>
+                            <p style="margin: 0;">Author: IsaacDSC & Matheus Mendes</p>
                         </td>
                     </tr>
                     <!-- end unsubscribe -->
