--- a/src/views/register/register.hbs
+++ b/src/views/register/register.hbs
@@ -31,7 +31,7 @@
                     </div>
                     <div class="checkbox">
                         <label>
-                            <input type="checkbox"><a href="" style="color: rgb(116, 115, 115);"> Agree the terms and policy</a>
+                            <input type="checkbox"><a href="" style="color: rgb(116, 115, 115);"> Aceito os termos de uso</a>
                         </label>
                     </div>
                     <button type="submit" class="btn btn-primary btn-flat m-b-30 m-t-30">Register</button>                    
