--- a/src/views/profile/myProfile.hbs
+++ b/src/views/profile/myProfile.hbs
@@ -2,6 +2,7 @@
 <div class="container">
     <div class="card">
         <div class="card-body">
+            {{>_msg}}
             <div class="row">
                 <div class="col-sm-4 mt-5">
                     <form action="/profile/upload" method="post" enctype="multipart/form-data">
@@ -9,8 +10,10 @@
                             <img src="/images/avatar/profile.png" alt="Fotom Perfil" class="ml-5"
                                 style="border-radius:50%;" width="250">
                         </a>
-                        <div class="form-group col-4 ml-4" >
-                            <button type="button" data-toggle="modal" data-target="#imgProfile" class="btn btn-outline-dark mt-3 ml-5" style="border-radius: 5px;">Carregar  Imagem</button>
+                        <div class="form-group col-4 ml-4">
+                            <button type="button" data-toggle="modal" data-target="#imgProfile"
+                                class="btn btn-outline-dark mt-3 ml-5" style="border-radius: 5px;">Carregar
+                                Imagem</button>
                         </div>
                     </form>
                 </div>
@@ -23,29 +26,28 @@
                             <div class="form-group col-6">
                                 <label for="nameLanchonete">Nome da Lanchonete</label>
                                 <input type="text" name="company" id="company" class="form-control"
-                                    placeholder="Digite o nome da Loja">
+                                    value="{{admin.dataValues.company}}" placeholder="Digite o nome da Loja">
                             </div>
                             <div class="form-group col-6">
                                 <label for="nameUser">Informe o nome do Usuario</label>
                                 <input type="text" name="nameUser" id="nameUser" class="form-control"
-                                    placeholder="Digite seu nome">
+                                    value="{{admin.dataValues.name}}" placeholder="Digite seu nome">
                             </div>
                         </div>
                         <div class="row">
                             <div class="form-group col-3">
                                 <label for="telephone">Telefone</label>
                                 <input type="text" name="telephone" id="telephone" class="form-control"
-                                    placeholder="Digite o numero de contato">
+                                    value="{{admin.dataValues.telephone}}" placeholder="Digite o numero de contato">
                             </div>
-                             <div class="form-group col-3">
+                            <div class="form-group col-3">
                                 <label for="pwd">Senha</label>
-                                <input type="password" name="pwd" id="pwd" class="form-control"
-                                    placeholder="Digite o numero de contato">
+                                <input type="password" name="pwd" id="pwd" class="form-control" placeholder="Senha">
                             </div>
                             <div class="form-group col-6">
                                 <label for="email">E-mail</label>
                                 <input type="text" name="email" id="email" class="form-control"
-                                    placeholder="Digite seu E-mail">
+                                    value="{{admin.dataValues.email}}" placeholder="Digite seu E-mail">
                             </div>
                         </div>
                         <div class="row">
