--- a/src/views/cashier/cashier.hbs
+++ b/src/views/cashier/cashier.hbs
@@ -83,6 +83,7 @@
                                 <li class="breadcrumb-item"><a href="#" class="breadcrumb-link">Montar Pedido</a></li>
                             </ol>
                         </nav>
+                         {{>_msg}}
                     </div>
                 </div>
             </div>
