--- a/src/views/register/register.hbs
+++ b/src/views/register/register.hbs
@@ -27,7 +27,7 @@
                     </div>
                     <div class="form-group">
                         <label>Numero para contato</label>
-                        <input  name="telephone" id="telephone" class="form-control" placeholder="Digite seu numero que entramos em contato">
+                        <input  name="telephone" id="telephone" class="form-control telefone" placeholder="Digite seu numero que entramos em contato">
                     </div>
                     <div class="checkbox">
                         <label>
@@ -43,3 +43,11 @@
         </div>
     </div>
 </div>
+
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+     <script src="https://igorescobar.github.io/jQuery-Mask-Plugin/js/jquery.mask.min.js"></script>  
+<script>
+
+    jQuery('.telefone').mask('(00) 0 0000-0000');
+   
+</script>
