--- a/src/views/dados/lucros.hbs
+++ b/src/views/dados/lucros.hbs
@@ -1,3 +1,4 @@
+<!--
 <div class="container">
     <div class="card" id="tela">
         <div class="card-body">
@@ -85,3 +86,9 @@
         </div>
     </div>
 </div>
+-->
+<canvas id="grafico"></canvas>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+ <script src="/scripts/grafico.js"></script>
