--- a/src/public/css/graficos.css
+++ b/src/public/css/graficos.css
@@ -1,138 +1,4 @@
-#tela {
-    height: 450px;
-    border: black 1px solid;
+#grafico {
+    background: #343A40;
     border-radius: 5px;
-}
-
-#tela .card-body ul li .row p {
-    width: 20%;
-    text-align: center;
-}
-
-#tela .card-body ul li .row #graficosUm,
-#graficosDois,
-#graficosTres,
-#graficosQuatro,
-#graficosCinco,
-#graficosSeis,
-#graficosSete {
-    margin-left: 5px;
-}
-
-#tela .card-body ul li {
-    display: block;
-    margin-top: 5px;
-    margin-left: 5%;
-    cursor: pointer;
-}
-
-#tela .card-body ul {
-    margin-top: 20px;
-    border: rgba(117, 117, 117, 0.582) 1px solid;
-    border-radius: 5px;
-    background-color: rgb(22, 22, 22);
-}
-
-#graficosUm {
-    width: 50%;
-    height: 30px;
-    background-color: rgba(0, 225, 255, 0.514);
-    border-radius: 5px;
-}
-
-#graficosDois {
-    width: 20%;
-    height: 30px;
-    background-color: #20A8D8;
-    border-radius: 5px;
-}
-
-#graficosTres {
-    width: 8%;
-    height: 30px;
-    background-color: #FFC107;
-    border-radius: 5px;
-}
-
-#graficosQuatro {
-    width: 20%;
-    height: 30px;
-    background-color: green;
-    border-radius: 5px;
-}
-
-#graficosCinco {
-    width: 30%;
-    height: 30px;
-    background-color: rgb(44, 44, 44);
-    border-radius: 5px;
-}
-
-#graficosSeis {
-    width: 2%;
-    height: 30px;
-    background-color: rgba(182, 0, 0, 0.842);
-    border-radius: 5px;
-}
-
-#graficosSete {
-    width: 20%;
-    height: 30px;
-    background-color: orangered;
-    border-radius: 5px;
-}
-
-#tela .card-body .bordaTow ul li {
-    display: block;
-    cursor: pointer;
-}
-
-.bordaTow #grafUm {
-    background-color: #FFC107;
-    height: 355px;
-    width: 10%;
-    border-radius: 5px;
-    margin-left: 30%;
-    cursor: pointer;
-}
-
-.bordaTow #grafUm #grafUmBranco {
-    background-color: rgb(22, 22, 22);
-    height: 200px;
-    width: 100%;
-    cursor: pointer;
-}
-
-.bordaTow #grafDois {
-    background-color: green;
-    margin-top: -360px;
-    height: 355px;
-    width: 10%;
-    border-radius: 5px;
-    margin-left: 41%;
-    cursor: pointer;
-}
-
-.bordaTow #grafDois #grafDoisBranco {
-    background-color: rgb(22, 22, 22);
-    height: 100px;
-    width: 100%;
-    cursor: pointer;
-}
-
-.bordaTow #grafTres {
-    background-color: rgb(44, 44, 44);
-    margin-top: -360px;
-    height: 355px;
-    width: 10%;
-    border-radius: 5px;
-    margin-left: 52%;
-    cursor: pointer;
-}
-
-.bordaTow #grafTres #grafTresBranco {
-    background-color: rgb(22, 22, 22);
-    height: 20px;
-    width: 100%;
-    cursor: pointer;
 }
