--- a/src/views/grapichs/grapichs.hbs
+++ b/src/views/grapichs/grapichs.hbs
@@ -19,176 +19,7 @@
         </div>
     </div>
 
-    <div class="col-md-6 col-lg-3">
-        <div class="card bg-flat-color-1 text-light">
-            <div class="card-body">
-                <div class="h4 m-0">89.9%</div>
-                <div>Lorem ipsum...</div>
-                <div class="progress-bar bg-light mt-2 mb-2" role="progressbar" style="width: 20%; height: 5px;"
-                    aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                <small class="text-light">Lorem ipsum dolor sit amet enim.</small>
-            </div>
-        </div>
-    </div>
-    <!--/.col-->
 
-    <div class="col-md-6 col-lg-3">
-        <div class="card bg-flat-color-3 text-light">
-            <div class="card-body">
-                <div class="h4 m-0">12.124</div>
-                <div>Lorem ipsum...</div>
-                <div class="progress-bar bg-light mt-2 mb-2" role="progressbar" style="width: 20%; height: 5px;"
-                    aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                <small class="text-light">Lorem ipsum dolor sit amet enim.</small>
-            </div>
-        </div>
-    </div>
-    <!--/.col-->
-
-    <div class="col-md-6 col-lg-3">
-        <div class="card bg-flat-color-4 text-light">
-            <div class="card-body">
-                <div class="h4 m-0">$98.111,00</div>
-                <div>Lorem ipsum...</div>
-                <div class="progress-bar bg-light mt-2 mb-2" role="progressbar" style="width: 20%; height: 5px;"
-                    aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                <small class="text-light">Lorem ipsum dolor sit amet enim.</small>
-            </div>
-        </div>
-    </div>
-    <!--/.col-->
-
-    <div class="col-md-6 col-lg-3">
-        <div class="card bg-flat-color-2 text-light">
-            <div class="card-body">
-                <div class="h4 m-0">$98.111,00</div>
-                <div>Lorem ipsum...</div>
-                <div class="progress-bar bg-light mt-2 mb-2" role="progressbar" style="width: 20%; height: 5px;"
-                    aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
-                <small class="text-light">Lorem ipsum dolor sit amet enim.</small>
-            </div>
-        </div>
-    </div>
-    <!--/.col-->
-
-    <div class="col-lg-3 col-md-6">
-        <div class="card">
-            <div class="card-body">
-                <div class="stat-widget-four">
-                    <div class="stat-icon dib">
-                        <i class="ti-server text-muted"></i>
-                    </div>
-                    <div class="stat-content">
-                        <div class="text-left dib">
-                            <div class="stat-heading">Database</div>
-                            <div class="stat-text">Total: 765</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-lg-3 col-md-6">
-        <div class="card">
-            <div class="card-body">
-                <div class="stat-widget-four">
-                    <div class="stat-icon dib">
-                        <i class="ti-user text-muted"></i>
-                    </div>
-                    <div class="stat-content">
-                        <div class="text-left dib">
-                            <div class="stat-heading">Users</div>
-                            <div class="stat-text">Total: 24720</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-lg-3 col-md-6">
-        <div class="card">
-            <div class="card-body">
-                <div class="stat-widget-four">
-                    <div class="stat-icon dib">
-                        <i class="ti-stats-up text-muted"></i>
-                    </div>
-                    <div class="stat-content">
-                        <div class="text-left dib">
-                            <div class="stat-heading">Daily Sales</div>
-                            <div class="stat-text">Total: $76,58,714</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="col-lg-3 col-md-6">
-        <div class="card">
-            <div class="card-body">
-                <div class="stat-widget-four">
-                    <div class="stat-icon dib">
-                        <i class="ti-pulse text-muted"></i>
-                    </div>
-                    <div class="stat-content">
-                        <div class="text-left dib">
-                            <div class="stat-heading">Bandwidth</div>
-                            <div class="stat-text">Total: 4TB</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="form-group col-8">
-            <canvas id="grafico"></canvas>
-        </div>
-        <div class="col-lg-4 col-md-4">
-            <aside class="profile-nav alt">
-                <section class="card">
-                    <div class="card-header user-header alt bg-dark">
-                        <div class="media">
-                            <a href="#">
-                                <img class="align-self-center rounded-circle mr-3" style="width:85px; height:85px;"
-                                    alt="" src="images/admin.jpg">
-                            </a>
-                            <div class="media-body">
-                                <h2 class="text-light display-6">Jim Doe</h2>
-                                <p>Project Manager</p>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
-                            <a href="#"> <i class="fa fa-envelope-o"></i> Mail Inbox <span
-                                    class="badge badge-primary pull-right">10</span></a>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="#"> <i class="fa fa-tasks"></i> Recent Activity <span
-                                    class="badge badge-danger pull-right">15</span></a>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="#"> <i class="fa fa-bell-o"></i> Notification <span
-                                    class="badge badge-success pull-right">11</span></a>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="#"> <i class="fa fa-comments-o"></i> Message <span
-                                    class="badge badge-warning pull-right r-activity">03</span></a>
-                        </li>
-                        <li class="list-group-item">
-                            <a href="#"> <i class="fa fa-cog"></i> Settings</a>
-                        </li>
-                    </ul>
-
-                </section>
-            </aside>
-        </div>
-    </div>
 
     <div class="col-sm-12 mb-4">
         <div class="card-group">
@@ -199,10 +30,10 @@
                     </div>
 
                     <div class="h4 mb-0">
-                        <span class="count">87500</span>
+                        <span class="count">{{dados.totalCliente}}</span>
                     </div>
 
-                    <small class="text-muted text-uppercase font-weight-bold">Visitors</small>
+                    <small class="text-muted text-uppercase font-weight-bold">Total de Clientes</small>
                     <div class="progress progress-xs mt-3 mb-0 bg-flat-color-1" style="width: 40%; height: 5px;"></div>
                 </div>
             </div>
@@ -212,9 +43,9 @@
                         <i class="fa fa-user-plus"></i>
                     </div>
                     <div class="h4 mb-0">
-                        <span class="count">385</span>
+                        <span class="count">{{dados.novosClientes}}</span>
                     </div>
-                    <small class="text-muted text-uppercase font-weight-bold">New Clients</small>
+                    <small class="text-muted text-uppercase font-weight-bold">Novos Clientes</small>
                     <div class="progress progress-xs mt-3 mb-0 bg-flat-color-2" style="width: 40%; height: 5px;"></div>
                 </div>
             </div>
@@ -224,9 +55,9 @@
                         <i class="fa fa-cart-plus"></i>
                     </div>
                     <div class="h4 mb-0">
-                        <span class="count">1238</span>
+                        <span class="count">{{dados.totalPedidos}}</span>
                     </div>
-                    <small class="text-muted text-uppercase font-weight-bold">Products sold</small>
+                    <small class="text-muted text-uppercase font-weight-bold">Total de Pedidos</small>
                     <div class="progress progress-xs mt-3 mb-0 bg-flat-color-3" style="width: 40%; height: 5px;"></div>
                 </div>
             </div>
@@ -238,7 +69,7 @@
                     <div class="h4 mb-0">
                         <span class="count">28</span>%
                     </div>
-                    <small class="text-muted text-uppercase font-weight-bold">Returning Visitors</small>
+                    <small class="text-muted text-uppercase font-weight-bold">Crescimento</small>
                     <div class="progress progress-xs mt-3 mb-0 bg-flat-color-4" style="width: 40%; height: 5px;"></div>
                 </div>
             </div>
@@ -247,8 +78,8 @@
                     <div class="h1 text-muted text-right mb-4">
                         <i class="fa fa-clock-o"></i>
                     </div>
-                    <div class="h4 mb-0">5:34:11</div>
-                    <small class="text-muted text-uppercase font-weight-bold">Avg. Time</small>
+                    <div class="h4 mb-0">10/11/2020</div>
+                    <small class="text-muted text-uppercase font-weight-bold">Data Vencimento</small>
                     <div class="progress progress-xs mt-3 mb-0 bg-flat-color-5" style="width: 40%; height: 5px;"></div>
                 </div>
             </div>
@@ -258,43 +89,94 @@
                         <i class="fa fa-comments-o"></i>
                     </div>
                     <div class="h4 mb-0">
-                        <span class="count">972</span>
+                        <span class="count"><i class="fa ti-lock"></i></span>
                     </div>
-                    <small class="text-muted text-uppercase font-weight-bold">COMMENTS</small>
+                    <small class="text-muted text-uppercase font-weight-bold">Nº Propagandas</small>
                     <div class="progress progress-xs mt-3 mb-0 bg-flat-color-1" style="width: 40%; height: 5px;"></div>
                 </div>
             </div>
         </div>
     </div>
-
-
-
-
-
-
-    <div class="col-lg-12 col-md-6">
-        <div class="card">
-            <div class="card-header">
-                <strong class="card-title mb-3">Profile Card</strong>
-            </div>
-            <div class="card-body">
-                <div class="mx-auto d-block">
-                    <img class="rounded-circle mx-auto d-block" src="images/admin.jpg" alt="Card image cap">
-                    <h5 class="text-sm-center mt-2 mb-1">Steven Lee</h5>
-                    <div class="location text-sm-center"><i class="fa fa-map-marker"></i> California, United States
+    <div class="card">
+        <div class="card-body">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-8">
+                        <h3>Produtos Mais Vendidos</h3>
+                        <hr>
+                        <canvas id="grafico"></canvas>
                     </div>
-                </div>
-                <hr>
-                <div class="card-text text-sm-center">
-                    <a href="#"><i class="fa fa-facebook pr-1"></i></a>
-                    <a href="#"><i class="fa fa-twitter pr-1"></i></a>
-                    <a href="#"><i class="fa fa-linkedin pr-1"></i></a>
-                    <a href="#"><i class="fa fa-pinterest pr-1"></i></a>
+                    <div class="col-sm-4 col-4">
+                        <aside class="profile-nav alt">
+                            <section class="card">
+                                <div class="card-header user-header alt bg-dark">
+                                    <div class="media">
+                                        <a href="#">
+                                            <img class="align-self-center rounded-circle mr-3"
+                                                style="width:85px; height:85px;" alt=""
+                                                src="/images/avatar/profile.png">
+                                        </a>
+                                        <div class="media-body">
+                                            <h2 class="text-light display-6">{{admin.name}}</h2>
+                                            <p>{{admin.company}}</p>
+                                        </div>
+                                    </div>
+                                    <p class="mt-2">{{admin.company}}{{admin.telephone}}</p>
+                                </div>
+
+
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">
+                                        <a href="#"> <i class="fa ti-stats-up"></i> Total Vendas <span
+                                                class="badge badge-primary pull-right">{{dinheiro dados.totalVendas}}</span></a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="#"> <i class="fa  fa-money"></i> Total Lucro <span
+                                                class="badge badge-success pull-right">{{dinheiro dados.totalLucro}}</span></a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="#"> <i class="fa ti-bar-chart"></i> Total Despesa <span
+                                                class="badge badge-danger pull-right">{{dinheiro dados.totalDespesa}}</span></a>
+                                    </li>
+
+                                    <li class="list-group-item">
+                                        <a href="#"> <i class="fa ti-money"></i> Pagamento<span
+                                                class="badge badge-warning pull-right r-activity">
+                                                {{dinheiro dados.pagamento}}</span></a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="#"> <i class="fa fa-cogs"></i> Configurar Planos</a>
+                                    </li>
+                                </ul>
+
+                            </section>
+                        </aside>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-    <script src="/scripts/grafico.js"></script>
+
+
+<div class="col-lg-12 col-md-6">
+    <div class="card">
+        <div class="card-header">
+            <strong class="card-title mb-3" style="text-align: center;">Developing Solutions</strong>
+        </div>
+        <div class="card-body">
+<p class="text-center"><i class="fa fa-code"></i>Author Matheus & Isaac DSC</p>
+            <div class="card-text text-sm-center">
+                <a href="#"><i class="fa fa-facebook pr-1"></i></a>
+                <a href="#"><i class="fa fa-twitter pr-1"></i></a>
+                <a href="#"><i class="fa fa-linkedin pr-1"></i></a>
+                <a href="#"><i class="fa fa-pinterest pr-1"></i></a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+<script src="/scripts/grafico.js"></script>
