--- a/src/views/partials/_nav.hbs
+++ b/src/views/partials/_nav.hbs
@@ -28,10 +28,7 @@
                 <div class="user-menu dropdown-menu">
                     <a class="nav-link" href="/profile"><i class="fa fa-user"></i> Perfil</a>
 
-                    <a class="nav-link" href="#"><i class="fa fa-user"></i> Notifications <span
-                            class="count">13</span></a>
-
-                    <a class="nav-link" href="#"><i class="fa fa-cog"></i> Configurações</a>
+                    <a class="nav-link" href="/config"><i class="fa fa-cog"></i> Configurações</a>
 
                     <a class="nav-link" href="/logout"><i class="fa fa-power-off"></i> Sair</a>
                 </div>
