--- a/src/views/dados/lucros.hbs
+++ b/src/views/dados/lucros.hbs
@@ -92,3 +92,4 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
  <script src="/scripts/grafico.js"></script>
+  <script src="/scripts/socket.js"></script>
