--- a/src/views/partials/_nav.hbs
+++ b/src/views/partials/_nav.hbs
@@ -1,6 +1,6 @@
 <!-- Header-->
 <header id="header" class="header">
-
+   <audio id="sound" src="/audio/campainha.mp3"></audio>
     <div class="header-menu">
         <div class="col-sm-7">
             <a id="menuToggle" class="menutoggle pull-left"><i class="fa fa fa-tasks"></i></a>
@@ -48,3 +48,4 @@
             //mudar class colocar no final da class show 
             //mudar aria-expanded="true"
 </script>
+<script src="/scripts/socket.js"></script>
