--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -29,12 +29,14 @@
 </head>
 
 <body>
+    <audio id="sound" src="/audio/campainha.mp3"></audio>
     {{>_sidebar}}
     <div id="right-panel" class="right-panel">
         {{>_nav}}
         {{{body}}}
     </div>
      <script src="/js/varglobalIp.js"></script>
+     <script src="/scripts/socket.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
